--- a/src/backend/sass/main.scss
+++ b/src/backend/sass/main.scss
@@ -1,3 +1,56 @@
-h1:before {
-  content: "Hello Word!";
+#wp-admin-bar-publish-changes {
+  > .ab-item {
+    background: #2271b1;
+    border-color: #2271b1;
+    color: #fff;
+    text-decoration: none;
+    text-shadow: none;
+    border-radius: 3px;
+  }
+
+  > .ab-item[disabled="true"] {
+    background: Gray;
+    &:hover,
+    &:focus {
+      background: Gray !important;
+    }
+  }
+}
+
+.deploy-modal-contents {
+  max-width: 50vw;
+  padding: 2em 2em;
+  > .icon {
+    text-align: center;
+
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both infinite;
+    transform: translate3d(0, 0, 0);
+
+    svg {
+      width: 20%;
+      height: auto;
+    }
+  }
+  > p {
+    font-size: 1.5em;
+    text-align: center;
+  }
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
